Dokončení cvičení z lekce + poznámky

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -11,7 +11,8 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
     <div class="container-fluid">
         <a class="navbar-brand" href="/" th:href="@{/}">Seznam členů</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                aria-controls="navbarCollapse"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,26 +22,34 @@
 </nav>
 
 <main class="container">
+    <!--    Přímo ve formuláři není id (neposílá se metodou post). Je v adrese, na kterou se to posílá. -->
     <form class="row g-3" th:classappend="${#fields.hasErrors('osoba.*')} ? 'was-validated'" method="post">
         <div class="col-md-6">
             <label for="jmeno" class="form-label">Jméno</label>
             <input type="text" class="form-control" th:field="${osoba.jmeno}" maxlength="100" required>
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.jmeno')}" th:errors="${osoba.jmeno}">Jméno je povinný údaj.</div>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.jmeno')}" th:errors="${osoba.jmeno}">Jméno
+                je povinný údaj.
+            </div>
         </div>
         <div class="col-md-6">
             <label for="prijmeni" class="form-label">Příjmení</label>
             <input type="text" class="form-control" th:field="${osoba.prijmeni}" maxlength="100" required>
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.prijmeni')}" th:errors="${osoba.prijmeni}">Příjmení je povinný údaj.</div>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.prijmeni')}" th:errors="${osoba.prijmeni}">
+                Příjmení je povinný údaj.
+            </div>
         </div>
         <div class="col-12">
             <label for="adresa" class="form-label">Adresa</label>
             <input type="text" class="form-control" th:field="${osoba.adresa}" maxlength="200" required>
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.adresa')}" th:errors="${osoba.adresa}">Adresa je povinný údaj.</div>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.adresa')}" th:errors="${osoba.adresa}">
+                Adresa je povinný údaj.
+            </div>
         </div>
         <div class="col-md-6">
             <label for="datumNarozeni" class="form-label">Datum narození</label>
             <input type="date" class="form-control" th:field="${osoba.datumNarozeni}" required>
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.datumNarozeni')}" th:errors="${osoba.datumNarozeni}">Datum narození je povinný
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.datumNarozeni')}"
+                 th:errors="${osoba.datumNarozeni}">Datum narození je povinný
                 údaj.
             </div>
         </div>
@@ -53,16 +62,21 @@
         <div class="col-md-6">
             <label for="email" class="form-label">E-mail</label>
             <input type="email" class="form-control" th:field="${osoba.email}">
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.email')}" th:errors="${osoba.email}">Chybný formát e-mailu.</div>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.email')}" th:errors="${osoba.email}">Chybný
+                formát e-mailu.
+            </div>
         </div>
         <div class="col-md-6">
             <label for="telefon" class="form-label">Telefon</label>
             <input type="tel" class="form-control" th:field="${osoba.telefon}" minlength="9" maxlength="13">
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.telefon')}" th:errors="${osoba.telefon}">Chybný formát telefonního čísla.</div>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('osoba.telefon')}" th:errors="${osoba.telefon}">
+                Chybný formát telefonního čísla.
+            </div>
         </div>
         <div class="col-12 d-flex justify-content-end">
             <button th:if="${osoba.id} == null" type="submit" class="btn btn-primary">Přidat</button>
-            <button th:if="${osoba.id} != null" type="submit" class="btn btn-light" name="akce" value="smazat">Smazat</button>
+            <button th:if="${osoba.id} != null" type="submit" class="btn btn-light" name="akce" value="smazat">Smazat
+            </button>
             <button th:if="${osoba.id} != null" type="submit" class="btn btn-primary">Uložit</button>
         </div>
     </form>
